cluster/config/gitea/gitea-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    pod-security.kubernetes.io/enforce: privileged
